infrastructure/controllers/argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 192.168.1.27
  listeners:
  - name: web
    hostname: argocd.mdch-lab.dev
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: argocd.mdch-lab.dev-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-web
  namespace: argocd
spec:
  parentRefs:
  - name: argocd-gateway
    sectionName: web
  hostnames:
  - "argocd.mdch-lab.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
  - backendRefs:
    - name: argocd-server
      port: 80
